admin/deploy/django-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rso-deploy

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  namespace: rso-deploy
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
        component: backend
    spec:
      containers:
        - name: user-api
          image: zankor/user-data:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8160
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: rso-deploy
  labels:
    app: user-api
spec:
  type: ClusterIP
  ports:
    - port: 8160
      protocol: TCP
      targetPort: 8000
  selector:
    app: user-api
    component: backend
---
