admin/deploy/producthandler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: product-handler-ingress
  namespace: rso-deploy
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/app-root: /products
    #nginx.ingress.kubernetes.io/rewrite-target: /$2

    nginx.ingress.kubernetes.io/configuration-snippet: |


      # Rewrite to /$2 if the path does not contain 'static'
      if ($request_uri !~* "/products/static") {
        add_header "X-Path" $request_uri;
        rewrite ^/products(/|$)(.*) /$2 break;
      }
      if ($request_uri !~* "/shoppingBasket/static") {
        add_header "X-Path" TESTPRODUCTS;
        rewrite ^/shoppingBasket(/|$)(.*) /$2 break;
      }
      if ($request_uri !~* "/user/static") {
        add_header "X-Path" TESTPRODUCTS;
        rewrite ^/user(/|$)(.*) /$2 break;
      }


    

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /shoppingBasket(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: shoppingbasket-service
                port:
                  number: 8080
          - path: /products(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: producthandler-service
                port:
                  number: 8000
          - path: /user(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8160
          - path: /app
            pathType: Prefix
            backend:
              service:
                name: productapp-service
                port:
                  number: 9000
